# ant_simulation

./: README.md  model.sdf
.gazebo/models/heightmap/: model.config  model.sdf
.gazebo/models/stone1/: model.config  model.sdf
.gazebo/models/stone2/: model.config  model.sdf
.gazebo/models/stone3/: model.config  model.sdf
ant/: model.config  modelAlt.sdf
ant/meshes/: ant-cox-front-left.dae  ant-cox-hind-left.dae  ant-cox-hind-right.dae  ant-cox-middle-left.dae  ant-eye-left.dae  ant-femur-front-right.dae  ant-head-dots.dae  ant-mandible-right.dae  ant-node.dae  ant-tarsus-front-left.dae  ant-tarsus-hind-left.dae  ant-tarsus-middle-right.dae  ant-tibia-front-left.dae  ant-tibia-front-right.dae  ant-tibia-hind-left.dae  ant-tibia-middle-right.dae  ant-tibia-strip-front-left.dae  ant-tibia-strip-front-right.dae  ant-tibia-strip-hind-right.dae  ant-trochanter-hind-right.dae  ant-trochanter-middle-left.dae  ant-trochanter-middle-right.dae
ant_sim/: CMakeLists.txt  package.xml
ant_sim/ant_control/: package.xml
ant_sim/ant_control/config/: ant_control.yaml
ant_sim/ant_control/launch/: ant_control.launch  ant_rqt.launch  ant_rqt.perspective
ant_sim/ant_description/: package.xml
ant_sim/ant_description/launch/: ant_rviz.launch
ant_sim/ant_description/meshes/: cox_f_l.dae  cox_m_l.dae  eye_l.dae  eye_r.dae  femur_m_l.dae  femur_m_r.dae  femur_r_l.dae  femur_r_r.dae  flagellum_l.dae  flagellum_r.dae  gaster.dae  head_only.dae  mandible_r.dae  scape_l.dae  tarsus_m_l.dae  tarsus_m_r.dae  tibia_f_l.dae  tibia_m_l.dae  tibia_r_l.dae  tibia_r_r.dae  trochanter_f_r.dae  trochanter_m_l.dae  trochanter_m_r.dae  trochanter_r_l.dae
ant_sim/ant_description/urdf/: ant.gv  ant.urdf  ant.xacro  ant_leg_l_f.xacro  ant_old_weights.xacro  ant_older.urdf
ant_sim/ant_gazebo/: CMakeLists.txt
ant_sim/ant_gazebo/launch/: ant_sim.launch
ant_sim/ant_gazebo/scripts/: keys.py  walk.py
ant_sim/ant_gazebo/src/ant_gazebo/: ant.py
ant_sim/ant_gazebo/worlds/: ant.world
ant_sim/launch/: main.launch
ant_sim/scripts/: move.py  moveTripods.py
ant_sim/src/: ant_control.cc  ant_control_old.cc
ant_sim/worlds/: main.world
ant_sim_urdf_ros/ant_control/: CMakeLists.txt  package.xml
ant_sim_urdf_ros/ant_control/config/: ant_control.yaml
ant_sim_urdf_ros/ant_control/launch/: ant_control.launch  ant_rqt.launch  ant_rqt.perspective
ant_sim_urdf_ros/ant_description/: CMakeLists.txt
ant_sim_urdf_ros/ant_description/launch/: ant.rviz  ant_rviz.launch
ant_sim_urdf_ros/ant_description/meshes/: cox_f_l.stl  cox_r_l.stl  cox_r_r.stl  femur_f_l.stl  femur_f_r.stl  femur_m_l.stl  femur_m_r.stl  gaster.stl  node.stl  petiole.stl  tarsus_m_l.stl  tarsus_r_l.stl  tarsus_r_r.stl  thorax.stl  tibia_f_l.stl  tibia_m_l.stl  trochanter_m_l.stl  trochanter_r_l.stl  trochanter_r_r.stl
ant_sim_urdf_ros/ant_description/urdf/: ant.urdf  ant.xacro  ant_full.xacro  ant_leg_r_f.xacro  ant_main_body.xacro
ant_sim_urdf_ros/ant_gazebo/: CMakeLists.txt  package.xml  setup.py
ant_sim_urdf_ros/ant_gazebo/launch/: ant_world.launch
ant_sim_urdf_ros/ant_gazebo/scripts/: walk.py  walk_demo.py
ant_sim_urdf_ros/ant_gazebo/src/ant_gazebo/: ant.py
ant_sim_urdf_ros/ant_gazebo/worlds/: ant.world
meshes/: translation.txt
(+139 files in other folders)
